force-app/main/default/objects/Inventory__c/fields/Avaliable_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Avaliable_Quantity__c</fullName>
    <label>Avaliable Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>