force-app/main/default/objects/Inventory__c/fields/Cost_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Cost_Per_Unit__c</fullName>
    <label>Cost Per Unit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>