force-app/main/default/objects/Inventory__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Glucose Reagent Kit</fullName>
            </value>
            <value>
                <fullName>Lipid Profile Reagent</fullName>
            </value>
            <value>
                <fullName>Urea &amp; Creatinine Reagent</fullName>
            </value>
            <value>
                <fullName>Liver Function Test (LFT) Reagents</fullName>
            </value>
            <value>
                <fullName>Urine Dipsticks (Multistix)</fullName>
            </value>
            <value>
                <fullName>Gram Stain Kit</fullName>
            </value>
            <value>
                <fullName>Wright’s Stain &amp; Giemsa Stain</fullName>
            </value>
            <value>
                <fullName>ELISA Test Kits</fullName>
            </value>
            <value>
                <fullName>HbA1c Reagent Kit</fullName>
            </value>
            <value>
                <fullName>COVID-19 RT-PCR Reagents</fullName>
            </value>
            <value>
                <fullName>Sysmex XN-1000</fullName>
            </value>
            <value>
                <fullName>Beckman Coulter AU480</fullName>
            </value>
            <value>
                <fullName>Abbott Architect c4000</fullName>
            </value>
            <value>
                <fullName>Roche Cobas 6000</fullName>
            </value>
            <value>
                <fullName>Mindray BC-6200</fullName>
            </value>
            <value>
                <fullName>Eppendorf Centrifuge 5810R</fullName>
            </value>
            <value>
                <fullName>Olympus CX23</fullName>
            </value>
            <value>
                <fullName>Bio-Rad CFX96</fullName>
            </value>
            <value>
                <fullName>Siemens ADVIA 560</fullName>
            </value>
            <value>
                <fullName>GE Logiq P9</fullName>
            </value>
            <value>
                <fullName>Vacutainers</fullName>
            </value>
            <value>
                <fullName>Syringes</fullName>
            </value>
            <value>
                <fullName>Needles &amp; Lancets</fullName>
            </value>
            <value>
                <fullName>Specimen Containers</fullName>
            </value>
            <value>
                <fullName>Glass Slides &amp; Cover Slips</fullName>
            </value>
            <value>
                <fullName>Refrigerators &amp; Freezers</fullName>
            </value>
            <value>
                <fullName>Cold Chain Transport Boxes</fullName>
            </value>
            <value>
                <fullName>Latex Gloves</fullName>
            </value>
            <value>
                <fullName>Nitrile Gloves</fullName>
            </value>
            <value>
                <fullName>Face Masks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>