force-app/main/default/objects/Inventory__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <formula>Avaliable_Quantity__c *  Cost_Per_Unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>