force-app/main/default/objects/Inventory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Center__c</columns>
    <columns>Cost_Per_Unit__c</columns>
    <columns>Avaliable_Quantity__c</columns>
    <columns>Expiry_Date__c</columns>
    <columns>Damaged__c</columns>
    <columns>Purchase_Date__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Product__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>